--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img scr="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img scr="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+         alt="lion"
+         />
+    <img scr="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+         alt="lion" 
+         title="lion roar"   
   </body>
 </html>
